--- a/src/Components/TempoDaSessao.css
+++ b/src/Components/TempoDaSessao.css
@@ -1,7 +1,7 @@
 .container-section{
     display: flex;
     justify-content: space-between;
-    width: 700px;
+    width: 100%;
 }
 
 .center-align {
