--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,8 @@
 }
 
 body {
-    display:flex; flex-direction:column; justify-content:center;
+    display:flex; 
+    flex-direction:column; 
+    justify-content:center;
     min-height:100vh;
 }
